# Novel_Buddies2

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  INSTALLER_GUIDE.md  INSTALLER_SUMMARY.md  LICENSE  QUICK_START.md  README.md  RELEASE_CHECKLIST.md  TROUBLESHOOTING.md  WINDOWS_INSTALLER_README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: AGENT_GUIDE.md  ARCHITECTURE.md  USER_GUIDE.md
installer/: INSTALLER_TROUBLESHOOTING.md  README.md
installer/windows/: PATH_FIX_GUIDE.md  build-from-here.bat  build-from-here.ps1  build-installer.bat  build-installer.ps1  install-log-template.txt  installer-complete.txt  installer-info.txt  novel-writer.iss
python-backend/: .env.example  build.py  main.py  novel_writer.spec  requirements.txt
python-backend/agents/: README.md  __init__.py  context_loader.py  literary_agents.py  orchestrator.py  pipeline.py  prompts.py
python-backend/models/: __init__.py  database.py
python-backend/routes/: chat.py  file_operations.py  files.py  git.py  memory.py  projects.py  websocket.py
python-backend/services/: __init__.py  memory_service.py
python-backend/utils/: __init__.py  logger.py  paths.py  token_manager.py
scripts/: setup.ps1  setup.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: file_ops.rs  git_ops.rs  main.rs
src/components/: FileOperationDialog.tsx
src/components/AgentChat/: AgentChat.tsx  AgentSelector.tsx  MessageBubble.tsx
src/lib/: agents.ts  api.ts  config.ts  logger.ts  store.ts  types.ts  utils.ts  websocket.ts
src/styles/: globals.css
(+7 files in other folders)
